ndb - bug#54168 - fix so that sendFragmented doesnt tamper with signal->theData